--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,6 @@
     </form>
     <button type="button" id="request-phone">Поделиться номером телефона</button>
   </div>
-  <script src="cloudpaymentsWidget.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
