--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,10 @@
 </head>
 <body>
   <div class="form-wrapper">
-    <h1>Оформление подписки</h1>
+    <h1>Подписка</h1>
     <div>
-      <div>
-        <span>Название: </span><span id="payment-name"></span>
-        <span>Сумма: </span><span id="payment-amount"></span>
-      </div>
+      <div><span>Название: </span><span id="payment-name"></span></div>
+      <div><span>Сумма: </span><span id="payment-amount"></span></div>
     </div>
     <p>Заполните форму для перехода к оплате</p>
     <form id="paymentForm">
