--- a/public/offer.html
+++ b/public/offer.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Оферта</title>
   <link href="style.css" rel="stylesheet">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <span>27.10.2023</span>
         <span>г. Москва</span>
       </div>
-      
+
       <div class="offer-body">
         <ol>
           <li>
@@ -308,6 +309,10 @@
       </div>
     </div>
   </div>
+
+  <script>
+    window.Telegram.WebApp.BackButton.hide();
+  </script>
 </body>
 
 </html>
