--- a/public/index.html
+++ b/public/index.html
@@ -32,14 +32,14 @@
       <div class="input-block">
         <label class="checkbox-label">
           <input type="checkbox" id="agreement-offer" name="agreement-offer" required />
-          <span class="checkbox-box"></span>
+          <span class="checkbox-box" tabindex="0" role="checkbox" aria-checked="false"></span>
           <span class="checkbox-text">Подтверждаю, что ознакомлен с&nbsp;<a href="/offer">офертой</a> и&nbsp;даю согласие на&nbsp;обработку персональных данных</span>
         </label>
       </div>
       <div class="input-block">
         <label class="checkbox-label">
           <input type="checkbox" id="agreement-subscription" name="agreement-subscription" required />
-          <span class="checkbox-box"></span>
+          <span class="checkbox-box" tabindex="0" role="checkbox" aria-checked="false"></span>
           <span class="checkbox-text">Согласен со&nbsp;стоимостью подписки в&nbsp;<span name="payment-amount"></span>₽ и&nbsp;периодичностью списаний в&nbsp;1&nbsp;месяц</span>
         </label>
       </div>
