--- a/public/offer.html
+++ b/public/offer.html
@@ -311,7 +311,7 @@
   </div>
 
   <script>
-    window.Telegram.WebApp.BackButton.hide();
+    window.Telegram.WebApp.BackButton.show();
   </script>
 </body>
 
