--- a/public/offer.html
+++ b/public/offer.html
@@ -312,6 +312,7 @@
 
   <script>
     window.Telegram.WebApp.BackButton.show();
+    window.Telegram.WebApp.BackButton.onClick(() => navigate(-1));
   </script>
 </body>
 
