--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <script src="https://widget.cloudpayments.ru/bundles/cloudpayments.js"></script>
 </head>
 <body>
-  <div class="form-wrapper">
+  <div class="container">
     <h1>Подписка</h1>
     <div>
       <div><span>Название: </span><span name="payment-name"></span></div>
